{
  "version": 4,
  "terraform_version": "1.6.0",
  "serial": 24,
  "lineage": "f2e7a8ff-ee32-c871-1d56-e7d60b5f042b",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "ingress",
      "provider": "provider[\"registry.opentofu.org/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "35.195.156.232",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2026-01-02T07:22:56.934-08:00",
            "id": "projects/ip2-devops4-480317/regions/europe-west1/addresses/ai-platform-ingress-ip-team4",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "ai-platform-ingress-ip-team4",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "ip2-devops4-480317",
            "region": "europe-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ip2-devops4-480317/regions/europe-west1/addresses/ai-platform-ingress-ip-team4"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_http_https",
      "provider": "provider[\"registry.opentofu.org/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "443",
                  "8000",
                  "8080",
                  "11434"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-01-02T07:23:08.613-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/ip2-devops4-480317/global/firewalls/allow-http-https-team4",
            "log_config": [],
            "name": "allow-http-https-team4",
            "network": "https://www.googleapis.com/compute/v1/projects/ip2-devops4-480317/global/networks/ai-network-team4",
            "priority": 1000,
            "project": "ip2-devops4-480317",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ip2-devops4-480317/global/firewalls/allow-http-https-team4",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_internal",
      "provider": "provider[\"registry.opentofu.org/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "udp"
              }
            ],
            "creation_timestamp": "2026-01-02T07:23:08.820-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/ip2-devops4-480317/global/firewalls/allow-internal-team4",
            "log_config": [],
            "name": "allow-internal-team4",
            "network": "https://www.googleapis.com/compute/v1/projects/ip2-devops4-480317/global/networks/ai-network-team4",
            "priority": 1000,
            "project": "ip2-devops4-480317",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ip2-devops4-480317/global/firewalls/allow-internal-team4",
            "source_ranges": [
              "10.1.0.0/20"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh",
      "provider": "provider[\"registry.opentofu.org/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-01-02T07:23:08.731-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/ip2-devops4-480317/global/firewalls/allow-ssh-team4",
            "log_config": [],
            "name": "allow-ssh-team4",
            "network": "https://www.googleapis.com/compute/v1/projects/ip2-devops4-480317/global/networks/ai-network-team4",
            "priority": 1000,
            "project": "ip2-devops4-480317",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ip2-devops4-480317/global/firewalls/allow-ssh-team4",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider[\"registry.opentofu.org/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/ip2-devops4-480317/global/networks/ai-network-team4",
            "mtu": 0,
            "name": "ai-network-team4",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "3915864881059486783",
            "project": "ip2-devops4-480317",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ip2-devops4-480317/global/networks/ai-network-team4"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet",
      "provider": "provider[\"registry.opentofu.org/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-01-02T07:23:08.867-08:00",
            "gateway_address": "10.1.0.1",
            "id": "projects/ip2-devops4-480317/regions/europe-west1/subnetworks/ai-subnet-team4",
            "ip_cidr_range": "10.1.0.0/20",
            "name": "ai-subnet-team4",
            "network": "https://www.googleapis.com/compute/v1/projects/ip2-devops4-480317/global/networks/ai-network-team4",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "ip2-devops4-480317",
            "purpose": "PRIVATE",
            "region": "europe-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ip2-devops4-480317/regions/europe-west1/subnetworks/ai-subnet-team4",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    }
  ]
}